# instagram-clone

./: README.md
api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  api_specification.yaml  db_design.puml  docker-compose.yml  fly.toml  query.sql  query_test.sql  vector.toml
api/config/: base.yaml  production.yaml
api/entity/: Cargo.toml
api/entity/src/: bookmarks.rs  favorites.rs  followers.rs  following.rs  lib.rs  post_comments.rs  post_files.rs  post_likes.rs  posts.rs  prelude.rs  stories.rs  user_links.rs  users.rs
api/migration/: Cargo.toml
api/migration/src/: lib.rs  m20220101_000001_create_table.rs  tables.rs
api/src/: app.rs  configuration.rs  db.rs  error.rs  lib.rs  logging.rs  main.rs  routes.rs
api/src/auth/: auth_controller.rs  auth_middleware.rs  auth_routes.rs  auth_service.rs  mod.rs
api/src/utils/: jwt.rs  mod.rs  parse_validation_errors.rs  password.rs
api/tests/: auth.rs
api/tests/utils/: mod.rs
parseable/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  fly.toml
