[package]
name = "insta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ['migration']

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.193", features = ["derive"] }
sea-orm = { version = "0.12.7", features = [ "sqlx-mysql", "runtime-actix-rustls", "macros", "with-uuid", "with-chrono" ] }
dotenv = "0.15.0"
entity = { path = "./entity" }
argon2 = "0.5.0"
config = { version = "0.13.3", features = ["default"] }
jsonwebtoken = "9.1.0"
validator = { version = "0.16.1", features = ["derive"] }
base64 = "0.21.2"
chrono = "0.4.26"
tracing-actix-web = "0.7.5"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.2.0"
tracing-appender = "0.2.2"
tracing = "0.1.37"
serde_json = "1.0.96"
actix-cors = "0.6.4"
serde_qs = "0.12.0"
serde_with = "3.4.0"
uuid = { version = "1.6.1", features = ["v8", "fast-rng"] }
serde-aux = "4.3.1"
regex = "1.10.2"
futures = "0.3.29"

[dev-dependencies]
fake = "2.6.1"
reqwest = { version = "0.11.6", features = ["json"] }
